fixed z-index issue with svg back

--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,6 @@ body{
   position: relative;
   border: solid 2px #DEDEDE;
   background-color: #EFEFEF;
-  z-index:0;
 }
 .group-half {
   width: calc(50% - 2px);
@@ -167,11 +166,10 @@ body{
   padding-bottom: calc(56.25% / 2);
   padding-top: 0px;
   display: inline-block;
-  z-index: 0;
 }
 .group-front {
     position: absolute;
-    z-index:0;
+    z-index:6000;
 }
 .group-back {
     width: 100%;
@@ -184,7 +182,6 @@ svg {
   margin-left: -50%;
   margin-top: -72%; 
   display: block;
-  z-index:0;
 }
 
 .svg-loader { 
